src/css/components/_nav.scss
// -----------------------------------------------------------------
//! Site Nav/Header
// -----------------------------------------------------------------

.header {
	width:100%;
	padding:8px 0;
	color:#fff;
	transform: translate3d(0px,0px,0px);
}

.header .container {
	display: flex;
	align-items: center;
	justify-content: space-between;
	@include respond($breakpoint-padding) {
		padding:0 32px;
	}
}

.header #logo-svg {
	width: 100px;
	position: relative;
	z-index: $z_index-level6;
	@include respond($breakpoint-hamburger) {
		width:192px;
	}
}

.header #logo-svg path {
	fill: #fff;
}

.header__nav {
	
}

.header__nav a {
	color:#fff;
	margin:0 0 0 32px;
	font-size:1.125em;
	position: relative;
	line-height: 32px;
	&:first-of-type {
		margin-left:0;
	}
	
	@include respond($breakpoint-typography-lg) {
		font-size:1.25em;
		margin:0 0 0 40px;		
	}
}

.header__nav a * {
	vertical-align: bottom;
}

.header__nav a:before {
	@include respond($breakpoint-hamburger) {
		content:"";
		position: absolute;
		left:50%;
		bottom:-5px;
		height:2px;
		width:0%;
		background:#fff;
		transition: all 0.2s ease;
	}
}

.header__nav a:hover {
	text-decoration: none;
	color:#fff;
	&:before {
		left:0;
		width:100%;
	}
}

// -----------------------------------------------------------------
//! Scrolled
// -----------------------------------------------------------------
.has-sticky .page-title,
.has-nav {
	header {
		position: fixed;
		background:#fff;

		left:16px;
		right:16px;
		width:auto;
		z-index: $z_index-level6;
		@include respond($breakpoint-padding) {
			left:24px;
			right:24px;	
		}
		border-bottom:1px solid rgba(0,0,0,0.05);
	}
	
	header #logo-svg {
		width: 100px;
	}
	
	header #logo-svg #logo-svg-text {
		display: none;
	}
	
	header #logo-svg #logo-svg-flame-icon path {
		fill: $color-red;
	}
	
	header {
		//Nav colors
		.hamburger__inner, 
		.hamburger__inner::before, 
		.hamburger__inner::after {
			background-color: $color-red;
		}
		.hamburger__label {
			color: $color-red;
		}
		.header__nav a {
			color: $color-red;
			&:before {
				background: $color-red;
			}	
		}
		
	}
	
}

.has-nav header {
	transform: none;
}


.has-sticky .page-title header{
	top:0;
}

// -----------------------------------------------------------------
//! Mobile Nav
// -----------------------------------------------------------------

@include respond($breakpoint-hamburger, "down") {
	.header__nav {
		position: fixed;
		top:0;
		bottom:0;
		left:0;
		right:0;
		padding:54px 0 0 0;
		//background: $color-red;
		background:$color-offwhite;
		display: none;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		transition: all 0.4s ease;
		z-index: $z_index-level5;
		
	}
	

	.has-nav .header__nav {
		display: flex;
	}
	
	.header__nav a {
		margin:0;
		line-height: 40px;
		border-top:1px solid $color-offwhite;
		display: block;
		width:100%;
		color:$color-red;
		padding:16px;
		font-size: 2em;
		font-family: $font-headings;
		&:first-of-type {
			border-top:none;
		}
		&:hover {
			color:$color-orange;
		}
	}
}

